--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/ListadoPolizas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/ListadoPolizas.cshtml
@@ -72,7 +72,13 @@
                                                 <tr>
                                                     <th>Acciones</th>
                                                     <th>
+                                                        @Html.DisplayNameFor(model => model.id)
+                                                    </th>
+                                                    <th>
                                                         @Html.DisplayNameFor(model => model.numero_documento_sap)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.descripcion_poliza)
                                                     </th>
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.fecha_creacion)
@@ -86,39 +92,15 @@
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.fecha_autorizacion)
                                                     </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.comentario_rechazo)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.descripcion_poliza)
-                                                    </th>
+
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.estatus)
                                                     </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.biblioteca_digital.Nombre)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.biblioteca_digital1.Nombre)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.currency.CurrencyName)
-                                                    </th>
+
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.empleados.numeroEmpleado)
                                                     </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.plantas.descripcion)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.PM_autorizadores.id)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.PM_tipo_poliza.descripcion)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.PM_validadores.id)
-                                                    </th>
+
 
                                                 </tr>
                                             </thead>
@@ -126,47 +108,41 @@
                                                 @foreach (var item in Model)
                                                 {
                                                     <tr>
+
                                                         <td>
-                                                        <td>
-                                                            @*@if (ViewBag.Edit != null && ViewBag.Edit)
-                                    {
-                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
-                                            <i class="fa fa-pencil-square-o"></i>
-                                        </a>
-                                    }
-                                    @if (ViewBag.Details != null && ViewBag.Details)
-                                    {
-                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
-                                            <i class="fa fa-info-circle"></i>
-                                        </a>
-                                    }
-                                    @if (ViewBag.SendToAuthorizer != null && ViewBag.SendToAuthorizer)
-                                    {
-                                        <a href="@Url.Action("Send", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info btm-sm" title="Enviar">
-                                            <i class="fa fa-send"></i>
-                                        </a>
-                                    }
-                                    @if (ViewBag.AuthorizarRechazar != null && ViewBag.AuthorizarRechazar)
-                                    {
-                                        <a href="@Url.Action("AutorizarRechazar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Authorize">
-                                            <i class="fa fa-check-square-o"></i>
-                                        </a>
-                                    }
-                                    @if (ViewBag.EditCredit != null && ViewBag.EditCredit)
-                                    {
-                                        <a href="@Url.Action("EditCreditNote", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Edit Credit Note">
-                                            <i class="fa fa-credit-card"></i>
-                                        </a>
-                                    }*@
+                                                            @if (ViewBag.Edit != null && ViewBag.Edit)
+                                                            {
+                                                                <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                                    <i class="fa fa-pencil-square-o"></i>
+                                                                </a>
+                                                            }
+                                                            @if (ViewBag.Details != null && ViewBag.Details)
+                                                            {
+                                                                <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
+                                                                    <i class="fa fa-info-circle"></i>
+                                                                </a>
+                                                            }
+                                                            @if (ViewBag.EnviarValidacion != null && ViewBag.EnviarValidacion)
+                                                            {
+                                                                <a href="@Url.Action("Send", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info btm-sm" title="Enviar">
+                                                                    <i class="fa fa-send"></i>
+                                                                </a>
+                                                            }
+                                                          
                                                         </td>
+                                                        <td style="text-align:center">
+                                                            @Html.DisplayFor(modelItem => item.id)
                                                         </td>
                                                         <td>
                                                             @Html.DisplayFor(modelItem => item.numero_documento_sap)
                                                         </td>
                                                         <td>
-                                                            @Html.DisplayFor(modelItem => item.fecha_creacion)
+                                                            @Html.DisplayFor(modelItem => item.descripcion_poliza)
                                                         </td>
                                                         <td>
+                                                            @item.fecha_creacion
+                                                        </td>
+                                                        <td style="text-align:center">
                                                             @Html.DisplayFor(modelItem => item.fecha_documento)
                                                         </td>
                                                         <td>
@@ -176,38 +152,12 @@
                                                             @Html.DisplayFor(modelItem => item.fecha_autorizacion)
                                                         </td>
                                                         <td>
-                                                            @Html.DisplayFor(modelItem => item.comentario_rechazo)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.descripcion_poliza)
-                                                        </td>
-                                                        <td>
                                                             @Html.DisplayFor(modelItem => item.estatus)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.biblioteca_digital.Nombre)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.biblioteca_digital1.Nombre)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.currency.CurrencyName)
                                                         </td>
                                                         <td>
                                                             @Html.DisplayFor(modelItem => item.empleados.numeroEmpleado)
                                                         </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.plantas.descripcion)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.PM_autorizadores.id)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.PM_tipo_poliza.descripcion)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.PM_validadores.id)
-                                                        </td>
+
 
                                                     </tr>
                                                 }
@@ -249,19 +199,19 @@
 
             //inicializa los data table
             $('#datatable_1').DataTable({
-                "paging": true,
+                "paging": false,
                 "ordering": false,
-                "searching": true,
+                "searching": false,
                 "scrollX": true,
                 "info": false
             });
 
         });
 
-            ////agranda el tamaño de la barra
-            //window.onload = function () {
-            //    document.getElementById('menu_toggle').click();
-            //}
+        //agranda el tamaño de la barra
+        //window.onload = function () {
+        //    clicMenu(1);
+        //}
 
 
     </script>
